--- a/popup.html
+++ b/popup.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<!-- Copyright 2022 BadAimWeeb. All rights reserved. MIT license. -->
+<!-- Copyright 2023 Abdulla Tech 49. All rights reserved. MIT license. -->
 
 <head>
   <script src="sha256.js"></script>
@@ -211,9 +211,9 @@
 
 <body>
   <div class="author">
-    <a href="https://github.com/c3cbot/c3c-fbstate/" target="_blank" class="author"><img src="./logo/128.png" alt="logo"
+    <a href="https://github.com/cyber-cat-abdulla/c3c-fbstate/" target="_blank" class="author"><img src="./logo/128.png" alt="logo"
         width="20px" height="20px"></a>
-    <a href="https://github.com/c3cbot/c3c-fbstate/" target="_blank" class="author">Github Author</a>
+    <a href="https://github.com/cyber-cat-abdulla/c3c-fbstate/" target="_blank" class="author">Github Author</a>
   </div>
 
   <div class="five_button" style="width: auto; height: auto; margin-left: 20px; margin-right: 20px">
