--- a/popup.html
+++ b/popup.html
@@ -213,7 +213,7 @@
   <div class="author">
     <a href="https://github.com/cyber-cat-abdulla/c3c-fbstate/" target="_blank" class="author"><img src="./logo/128.png" alt="logo"
         width="20px" height="20px"></a>
-    <a href="https://github.com/cyber-cat-abdulla/c3c-fbstate/" target="_blank" class="author">Github Author</a>
+    <a href="https://github.com/cyber-cat-abdulla/c3c-fbstate/" target="_blank" class="author">Abdulla Tech 49</a>
   </div>
 
   <div class="five_button" style="width: auto; height: auto; margin-left: 20px; margin-right: 20px">
